# Useful-things-

./: CRTP.cpp  CheckingVariantType.cpp  DeltaTime.cpp  Function and Compile-Time Function.cpp  Iterator.cpp  README.md  SDL3_Window.cpp  Thread Benchmarks.cpp  assim vs obj loaders.cpp  attenuationStandartFormula.glsl  benchmark.cpp  fileCreating(JSON_AND_USUAL).cpp  gcdFunc.cpp  graphsCosSine.cpp  lifetime.cpp  printExactType.cpp  printTupleWithoutSize.cpp  type_erasure.cpp  usingVisit.cpp
GLM math examples/: CMakeLists.txt  howToTranslateFromNegative1ToPositive1.glsl
GLM math examples/GeralThings/src/: main.cpp
GLM math examples/WorldLocalSpace/: CMakeLists.txt  README.md
GLM math examples/WorldLocalSpace/src/: main.cpp
GLM math examples/resources/: vert.glsl
GLM math examples/src/: main.cpp
ImGui example/: CMakeLists.txt
ImGui example/resources/: frag.glsl  vert.glsl
ImGui example/src/: main.cpp
Sorts/: BubbleSort.cpp  InsertionSort.cpp  QuickSort.cpp  SelectionSort.cpp
interestingNoticing/: FilledVectorWithString.cpp  autoPitfall.cpp  decodingAndEncodingStrings.cpp
std/: .size() vs size() vs ssize().cpp  FindApproaches.cpp  IndexSequence.cpp  countr_one_countr_zero.cpp  enable_shared_from_this.cpp  kindaReflection.cpp  nested_templates.cpp  std::derived_from.cpp  std::packaged_task.cpp  storage<>reference.cpp
